--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# config files
+config.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +130,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
